# nuch

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: cargo.yml  release.yml  rust.yml
src/: config.rs  fs.rs  git.rs  main.rs  publish.rs  tui.rs  ui.rs
wix/: main.wxs
