[package]
name = "nuch"
version = "1.1.1"
edition = "2024"
authors = ["Hassan Qasemi"]
description = "A CLI to manage Markdown content and images for Nuxt Content sites."
license = "MIT"
repository = "https://github.com/rivethorn/nuch"
homepage = "https://github.com/rivethorn/nuch"
readme = "README.md"


[dependencies]
inquire = "0.9.1"
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
serde_json = "1.0.147"

[dev-dependencies]
tempfile = "3.24.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
