[package]
name = "nuch"
version = "1.3.0"
edition = "2024"
authors = ["Hassan Qasemi"]
description = "A CLI to manage Markdown content and images for Nuxt Content sites."
license = "MIT"
repository = "https://github.com/rivethorn/nuch"
homepage = "https://github.com/rivethorn/nuch"
readme = "README.md"

[package.metadata.wix]
upgrade-guid = "43DF5BF4-2D0F-4F09-81E9-D0130648862D"
path-guid = "38063E73-FCF9-4465-86B1-4EC669ED2628"
license = false
eula = false


[dependencies]
inquire = "0.9.1"
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
serde_json = "1.0.147"

[dev-dependencies]
tempfile = "3.24.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
